Pedro Henrique - inclusao header

--- a/index.html
+++ b/index.html
@@ -19,20 +19,21 @@
     <!-- HEADER -->
     <header>
         <div class="container-header">
-            <img src="./img/apenas logo.png" alt="logo">
-            <nav class="container-menu">
-                <div class="container-menu-itens">
-                    <a href="#">Home</a>
-                    <a href="#">Quem Somos</a>
-                    <a href="#">Ajuda</a>
-                    <a href="#">Atendimento</a>
-                </div>
-                <div class="container-login">
-                    <a id="login" href="#">Login</a>
-                </div>
-            </nav>
+            <img src="./img/apenas logo.png" alt="logo" width="50">
+            <div>
+                <nav class="container-menu">
+                    <div class="container-menu-itens">
+                        <a href="#">Home</a>
+                        <a href="#">Quem Somos</a>
+                        <a href="#">Ajuda</a>
+                        <a href="#">Atendimento</a>
+                    </div>
+                </nav>
+            </div>
+            <div class="container-login">
+                <a id="login" href="#">Login</a>
+            </div>
         </div>
-
     </header>
     <!-- MAIN -->
     <main>
