--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
     <!-- inclusão google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;400;500&family=Montserrat:wght@100;200;500;900&display=swap"
-        rel="stylesheet">
-    <title>4FOOD</title>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;400;500&family=Montserrat:wght@100;200;500;900&family=Zen+Old+Mincho&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -24,7 +21,7 @@
                 <nav class="container-menu">
                     <div class="container-menu-itens">
                         <a href="#">Home</a>
-                        <a href="#">Quem Somos</a>
+                        <a href="#section-quem-somos">Quem Somos</a>
                         <a href="#">Ajuda</a>
                         <a href="#">Atendimento</a>
                     </div>
@@ -46,7 +43,7 @@
             </div>
         </section>
         <!-- Seção Quem Somos -->
-        <section class="container-quem-somos">
+        <section class="container-quem-somos" id="section-quem-somos">
             <div class="quem-somos">
                 <p>Somos uma empresa do ramo alimentício, com foco no seu bem estar, sem abrir mão do seu conforto</p>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum dolor eum ipsa tempore, eligendi aut
@@ -127,37 +124,50 @@
 
     <!-- FOOTER -->
     <footer>
-        <div class="container-redes">
-            <h3>Redes Sociais</h3>
-            <a target="_blank" href="https://www.instagram.com/">
-                <img src="./img/icon-instagram-100.png" alt="instagram" width="60px">
-            </a>
-            <a target="_blank" href="https://www.facebook.com/">
-                <img src="./img/icons8-facebook-100.png" alt="facebook" width="60px">
-            </a>
-            <a target="_blank" href="https://twitter.com/">
-                <img src="./img/icons8-twitter-100.png" alt="twitter" width="60px">
-            </a>
-
+        <div class="linha1">
+            <div class="container-redes">
+                <h3>Redes Sociais</h3>
+                <div class="container-logo-redes">
+                    <a target="_blank" href="https://www.instagram.com/">
+                        <img src="./img/icon-instagram-100.png" alt="instagram" width="60px">
+                    </a>
+                    <a target="_blank" href="https://www.facebook.com/">
+                        <img src="./img/icons8-facebook-100.png" alt="facebook" width="60px">
+                    </a>
+                    <a target="_blank" href="https://twitter.com/">
+                        <img src="./img/icons8-twitter-100.png" alt="twitter" width="60px">
+                    </a>
+                </div>
+            </div>
+            <div class="container-atendimento">
+                <h3>Atendimento</h3>
+                <a href="#"><p>+55 11 3333-3333</p></a>
+                <p>+55 11 7777-7777</p>
+                <p>Perguntas Frequentes</p>
+                <p>sac@4food.com.br</p>
+            </div>
+            <div class="container-form">
+                <h3 class="header-form">Faça contato!</h3>
+                <form class="formulario-parte1">
+                    <div class="container-form1">
+                        <label for="fname">Nome:</label>
+                        <input type="text" name="fname">
+                        <label id="label-email" for="lname">E-mail:</label>
+                        <input type="text" name="lname">
+                    </div>
+                </form>
+                <form class="formulario-parte2">
+                    <div class="container-form2">
+                        <label class="txt-form" for="txt">Mensagem:</label>
+                        <textarea name="txt" class="txt-form" cols="30" rows="4"></textarea>
+                        <button id="button-form">Enviar</button>
+                    </div>
+                </form>
+            </div>
         </div>
-        <div class="container-atendimento">
-            <h3>Atendimento</h3>
-            <p>+55 11 3333-3333</p>
-            <p>+55 11 7777-7777</p>
-            <p>Perguntas Frequentes</p>
-            <p>sac@4food.com.br</p>
-        </div>
-        <div class="container-form">
-            <h3>Faça contato!</h3>
-            <form class="formulario">
-                <label for="fname">Nome:</label>
-                <input type="text" id="fname" name="fname"><br>
-                <label for="lname">E-mail:</label>
-                <input type="text" id="lname" name="lname"><br>
-                <label for="txt">Mensagem:</label>
-                <textarea name="txt" id="txt" cols="30" rows="4"></textarea>
-                <button>Enviar</button>
-            </form>
+        <div class="linha2">
+            <h1>4FOOD®</h1>
+            <p>© 2021 4Food Tecnologia e Serviços Alimentícios S.A</p>
         </div>
     </footer>
 </body>
