--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <!-- inclusão google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;400;500&family=Montserrat:wght@100;200;500;900&family=Zen+Old+Mincho&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;400;500&family=Montserrat:wght@100;200;500;900&family=Zen+Old+Mincho&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -43,7 +45,10 @@
             </div>
         </section>
         <!-- Seção Quem Somos -->
-        <section class="container-quem-somos" id="section-quem-somos">
+        <section class="container-quem-somos">
+            <div class="titulo-quem-somos">
+                <h1>Quem Somos</h1>
+            </div>
             <div class="quem-somos">
                 <p>Somos uma empresa do ramo alimentício, com foco no seu bem estar, sem abrir mão do seu conforto</p>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum dolor eum ipsa tempore, eligendi aut
@@ -58,7 +63,7 @@
             <div class="header-produtos">
                 <!-- mudança nome classe -->
                 <div class="titulo-header">
-                    <h1>nossos principais produtos</h1>
+                    <h1>Nossos Principais Pratos</h1>
                 </div>
                 <div class="container-setinha">
                     <!-- mudança nome classe -->
@@ -71,7 +76,7 @@
                         <img src="./img/imagem-comida.jpg" alt="comida">
                     </div>
                     <div class="titulo-comida">
-                        <h2>comida1</h2>
+                        <h2>Carne Louca</h2>
                     </div>
                     <div class="container-peso-preco">
                         <p>preço: R$ 15,90</p>
@@ -81,10 +86,10 @@
                 </div>
                 <div class="container-card">
                     <div class="container-imagem">
-                        <img src="./img/imagem-comida.jpg" alt="comida">
+                        <img src="./img/bolinha-de-abobora-e-carne-com-chia.jpeg" alt="comida">
                     </div>
                     <div class="titulo-comida">
-                        <h2>comida2</h2>
+                        <h2>Bolinha de Abobóra e Carne com Chia</h2>
                     </div>
                     <div class="container-peso-preco">
                         <p>preço: R$ 17,90</p>
@@ -94,10 +99,10 @@
                 </div>
                 <div class="container-card">
                     <div class="container-imagem">
-                        <img src="./img/imagem-comida.jpg" alt="comida">
+                        <img src="./img/camarao-ao-leite-de-coco-e-curry.jpeg" alt="comida">
                     </div>
                     <div class="titulo-comida">
-                        <h2>comida3</h2>
+                        <h2>Camarão ao leite de coco e curry</h2>
                     </div>
                     <div class="container-peso-preco">
                         <p>preço: R$ 19,90</p>
@@ -107,10 +112,76 @@
                 </div>
                 <div class="container-card">
                     <div class="container-imagem">
-                        <img src="./img/imagem-comida.jpg" alt="comida">
+                        <img src="./img/estrogonofe-de-frango.jpeg" alt="comida">
                     </div>
                     <div class="titulo-comida">
-                        <h2>comida4</h2>
+                        <h2>Strogonoff de Frango</h2>
+                    </div>
+                    <div class="container-peso-preco">
+                        <p>preço: R$ 18,90</p>
+                        <p>peso: 250g</p>
+                    </div>
+                    <button id="button">comprar</button>
+                </div>
+            </div>
+        </section>
+        <section class="section-produtos">
+            <div class="header-produtos">
+                <!-- mudança nome classe -->
+                <div class="titulo-header">
+                    <h1>Produtos do Nosso Mercado</h1>
+                </div>
+                <div class="container-setinha">
+                    <!-- mudança nome classe -->
+                    <img src="./img/setinha.png" alt="setinha">
+                </div>
+            </div>
+            <div class="container-produtos">
+                <div class="container-card">
+                    <div class="container-imagem">
+                        <img src="./img/dengo-chocolate-banana-e-castanha-de-caju-200g-200g.jpeg" alt="comida">
+                    </div>
+                    <div class="titulo-comida">
+                        <h2>Chocolate Dengo</h2>
+                    </div>
+                    <div class="container-peso-preco">
+                        <p>preço: R$ 15,90</p>
+                        <p>peso: 250g</p>
+                    </div>
+                    <button id="button">comprar</button>
+                </div>
+                <div class="container-card">
+                    <div class="container-imagem">
+                        <img src="./img/brownie-70-cacau-congelado.jpg" alt="comida">
+                    </div>
+                    <div class="titulo-comida">
+                        <h2>Brownie Congelado</h2>
+                    </div>
+                    <div class="container-peso-preco">
+                        <p>preço: R$ 17,90</p>
+                        <p>peso: 250g</p>
+                    </div>
+                    <button id="button">comprar</button>
+                </div>
+                <div class="container-card">
+                    <div class="container-imagem">
+                        <img src="./img/mini-pao-de-queijo-funcional-congelado.jpg" alt="comida">
+                    </div>
+                    <div class="titulo-comida">
+                        <h2>Pão de Queijo</h2>
+                    </div>
+                    <div class="container-peso-preco">
+                        <p>preço: R$ 19,90</p>
+                        <p>peso: 250g</p>
+                    </div>
+                    <button id="button">comprar</button>
+                </div>
+                <div class="container-card">
+                    <div class="container-imagem">
+                        <img src="./img/castanha-de-caju-e-amendoim--lemon-pepper.jpg" alt="comida">
+                    </div>
+                    <div class="titulo-comida">
+                        <h2>Snacks de Castanha de Caju e Amendoim</h2>
                     </div>
                     <div class="container-peso-preco">
                         <p>preço: R$ 18,90</p>
@@ -141,7 +212,9 @@
             </div>
             <div class="container-atendimento">
                 <h3>Atendimento</h3>
-                <a href="#"><p>+55 11 3333-3333</p></a>
+                <a href="#">
+                    <p>+55 11 3333-3333</p>
+                </a>
                 <p>+55 11 7777-7777</p>
                 <p>Perguntas Frequentes</p>
                 <p>sac@4food.com.br</p>
