--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
     <main>
         <!-- Seção Inicial -->
         <section class="container-inicial">
-            <div class="logo"> <img src="./img/logo-4food.png" alt="logo"></div>
-            <div class="texto">
+            <div class="logo"> 
+                <img src="./img/logo-4food.png" alt="logo">
+            </div>
+            <div class="container-texto">
                 <p>Coma bem, porque a gente se preocupa com você </p>
                 <p>Sem sair de casa, porque o seu conforto é impotante</p>
             </div>
@@ -51,11 +53,8 @@
             </div>
             <div class="quem-somos">
                 <p>Somos uma empresa do ramo alimentício, com foco no seu bem estar, sem abrir mão do seu conforto</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum dolor eum ipsa tempore, eligendi aut
-                    praesentium pariatur vitae doloremque repellat id excepturi, commodi voluptas reprehenderit laborum
-                    ! Deserunt ea provident rem aperiam facere numquam? Debitis vitae non, libero harum excepturi
-                    inventore
-                    quod sed tempora repudiandae nesciunt, iusto atque facilis pariatur dolorem?</p>
+                <p>A 4Food iniciou seus trabalhos no ramo da alimentação no ano de 2017. Começamos simplesmente como um delivery de pratos executivos e nosso compromisso com o cliente possibilitou o crescimento do negócio. A 4Food atualmente trabalha tanto com venda de pratos quanto com entrega de produtos de mercado. Tudo pensando no seu conforto, fazendo da entrega nossa prioridade! Nossos produtos são preparados e pensados com propósito, buscando fortalecer produtores e famílias locais, fornecendo produtos completamente naturais. 
+                </p>
             </div>
         </section>
         <!-- Seção Produtos -->
