Alterando o footer para responsivo

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
             </div>
             <div class="quem-somos">
                 <p>Somos uma empresa do ramo alimentício, com foco no seu bem estar, sem abrir mão do seu conforto</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum dolor eum ipsa tempore, eligendi aut
-                    praesentium pariatur vitae doloremque repellat id excepturi, commodi voluptas reprehenderit laborum
-                    ! Deserunt ea provident rem aperiam facere numquam? Debitis vitae non, libero harum excepturi
-                    inventore
-                    quod sed tempora repudiandae nesciunt, iusto atque facilis pariatur dolorem?</p>
+                <p>A 4Food iniciou seus trabalhos no ramo da alimentação no ano de 2017. Começamos simplesmente como um
+                    delivery de pratos executivos e nosso compromisso com o cliente possibilitou o crescimento do negócio.
+                    A 4Food atualmente trabalha tanto com venda de pratos quanto com entrega de produtos de mercado. Tudo 
+                    pensando no seu conforto, fazendo da entrega nossa prioridade! Nossos produtos são preparados e pensados 
+                    com propósito, buscando fortalecer produtores e famílias locais, fornecendo produtos completamente naturais.</p>
             </div>
         </section>
         <!-- Seção Produtos -->
@@ -215,9 +215,15 @@
                 <a href="#">
                     <p>+55 11 3333-3333</p>
                 </a>
+                <a href="#">
                 <p>+55 11 7777-7777</p>
+                </a>
+                <a href="#">
                 <p>Perguntas Frequentes</p>
+                </a>
+                <a href="#">
                 <p>sac@4food.com.br</p>
+                </a>
             </div>
             <div class="container-form">
                 <h3 class="header-form">Faça contato!</h3>
