Cesar Huber - inclusao alterações footer

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <main>
         <!-- Seção Inicial -->
         <section class="container-inicial">
-            <div class="logo"> 
+            <div class="logo">
                 <img src="./img/logo-4food.png" alt="logo">
             </div>
             <div class="container-texto">
@@ -54,10 +54,14 @@
             <div class="quem-somos">
                 <p>Somos uma empresa do ramo alimentício, com foco no seu bem estar, sem abrir mão do seu conforto</p>
                 <p>A 4Food iniciou seus trabalhos no ramo da alimentação no ano de 2017. Começamos simplesmente como um
-                    delivery de pratos executivos e nosso compromisso com o cliente possibilitou o crescimento do negócio.
-                    A 4Food atualmente trabalha tanto com venda de pratos quanto com entrega de produtos de mercado. Tudo 
-                    pensando no seu conforto, fazendo da entrega nossa prioridade! Nossos produtos são preparados e pensados 
-                    com propósito, buscando fortalecer produtores e famílias locais, fornecendo produtos completamente naturais.</p>
+                    delivery de pratos executivos e nosso compromisso com o cliente possibilitou o crescimento do
+                    negócio.
+                    A 4Food atualmente trabalha tanto com venda de pratos quanto com entrega de produtos de mercado.
+                    Tudo
+                    pensando no seu conforto, fazendo da entrega nossa prioridade! Nossos produtos são preparados e
+                    pensados
+                    com propósito, buscando fortalecer produtores e famílias locais, fornecendo produtos completamente
+                    naturais.</p>
 
             </div>
         </section>
@@ -213,38 +217,40 @@
                     </a>
                 </div>
             </div>
-            <div class="container-atendimento">
-                <h3>Atendimento</h3>
-                <a href="#">
-                    <p>+55 11 3333-3333</p>
-                </a>
-                <a href="#">
-                <p>+55 11 7777-7777</p>
-                </a>
-                <a href="#">
-                <p>Perguntas Frequentes</p>
-                </a>
-                <a href="#">
-                <p>sac@4food.com.br</p>
-                </a>
-            </div>
-            <div class="container-form">
-                <h3 class="header-form">Faça contato!</h3>
-                <form class="formulario-parte1">
-                    <div class="container-form1">
-                        <label for="fname">Nome:</label>
-                        <input type="text" name="fname">
-                        <label id="label-email" for="lname">E-mail:</label>
-                        <input type="text" name="lname">
-                    </div>
-                </form>
-                <form class="formulario-parte2">
-                    <div class="container-form2">
-                        <label class="txt-form" for="txt">Mensagem:</label>
-                        <textarea name="txt" class="txt-form" cols="30" rows="4"></textarea>
-                        <button id="button-form">Enviar</button>
-                    </div>
-                </form>
+            <div class="midia">
+                <div class="container-atendimento">
+                    <h3>Atendimento</h3>
+                    <a href="#">
+                        <p>+55 11 3333-3333</p>
+                    </a>
+                    <a href="#">
+                        <p>+55 11 7777-7777</p>
+                    </a>
+                    <a href="#">
+                        <p>Perguntas Frequentes</p>
+                    </a>
+                    <a href="#">
+                        <p>sac@4food.com.br</p>
+                    </a>
+                </div>
+                <div class="container-form">
+                    <h3 class="header-form">Faça contato!</h3>
+                    <form class="formulario-parte1">
+                        <div class="container-form1">
+                            <label for="fname">Nome:</label>
+                            <input type="text" name="fname">
+                            <label id="label-email" for="lname">E-mail:</label>
+                            <input type="text" name="lname">
+                        </div>
+                    </form>
+                    <form class="formulario-parte2">
+                        <div class="container-form2">
+                            <label class="txt-form" for="txt">Mensagem:</label>
+                            <textarea name="txt" class="txt-form" cols="30" rows="4"></textarea>
+                            <button id="button-form">Enviar</button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
         <div class="linha2">
