Cesar Huber - inclusão de novas alterações e correção de layout do footer. Inclusão do Readme

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
             <div class="container-texto">
                 <p>Coma bem, porque a gente se preocupa com você </p>
-                <p>Sem sair de casa, porque o seu conforto é impotante</p>
+                <p>Sem sair de casa, porque o seu conforto é importante</p>
             </div>
         </section>
         <!-- Seção Quem Somos -->
@@ -62,7 +62,6 @@
                     pensados
                     com propósito, buscando fortalecer produtores e famílias locais, fornecendo produtos completamente
                     naturais.</p>
-
             </div>
         </section>
         <!-- Seção Produtos -->
